added some changes to html file

--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
         </div>
         
         <!-- Get your discount section -->
-        <div class="get-your-discount-section">
+        <!-- <div class="get-your-discount-section">
             <div class="get-your-discount-info">
                 <span class="get-your-discount-announce">Sale of the month</span>
                 <h2 class="get-your-discount-tittle">
                     Get Your Discount<span class="header-dot-style">.</span>
                 </h2>
                 <a href="#" class="btn-shop-now">Shop now</a>
-            </div>
+            </div> -->
         <!--Block 7-8 end-->
 
         <!--Block 9-10 Pavlo start-->
@@ -355,7 +355,7 @@
             <p class="text-start-your">Start your fitness story right away with this comfortable bra and get advantage
                 of our discount.</p>
             <a class="text-more-details" href="#more-details">More Details</a>
-            <img src="img/deal-of-the-month/stretch-women.jpg" alt="Stretching woman">
+            <!-- <img class="de" src="img/deal-of-the-month/stretch-women.jpg" alt="Stretching woman"> -->
             <div class="countdown">
                 <p>Here must be countdown</p>
             </div>
@@ -427,7 +427,7 @@
                 <a class="keep-learn-more" href="#about-us">Learn More</a>
             </div>
             <div class="workout-woman-img">
-                <img src="img/deal-of-the-month/workout-woman.jpg" alt="Fit Woman">
+                <img src="img/deal-of-the-month/workout-woman.jpg" width="100%" alt="Fit Woman">
             </div>
         </div>
         <!--END Pavlo-->
