Changed paths to img in header and front page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <a href="index.html"> <img width="200" src="img/logo.svg" alt="logo"></a>
+                    <a href="index.html"> <img width="200" src="img/icons/company-logo.svg" alt="logo"></a>
                     <label class="burger-icon" for="burger-checkbox">☰</label>
                     <input type="checkbox" id="burger-checkbox">
                 </div>
