--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workout</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/css-main-collection.css">
     <link rel="stylesheet" href="css/keep-fit-with-comfort.css">
     <link rel="stylesheet" href="css/carousel-discounts.css">
@@ -28,11 +29,9 @@
         </div>
         <div class="container">
             <nav>
-                <div class="logo">
-                    <a href="index.html"> <img width="200" src="img/icons/company-logo.svg" alt="logo"></a>
+                    <a href="index.html"> <img class="logo" width="200" src="img/icons/company-logo.svg" alt="logo"></a>
                     <label class="burger-icon" for="burger-checkbox">☰</label>
                     <input type="checkbox" id="burger-checkbox">
-                </div>
                 <div class="menu-nav">
                     <a href="#about-us">About us</a>
                     <a href="#sale">Sale</a>
