--- a/product-page.html
+++ b/product-page.html
@@ -20,11 +20,9 @@
         </div>
         <div class="container">
             <nav>
-                <div class="logo">
-                    <a href="index.html"> <img width="200" src="img/icons/company-logo.svg" alt="logo"></a>
+                    <a href="index.html"> <img class="logo" width="200" src="img/icons/company-logo.svg" alt="logo"></a>
                     <label class="burger-icon" for="burger-checkbox">☰</label>
                     <input type="checkbox" id="burger-checkbox">
-                </div>
                 <div class="menu-nav">
                     <a href="#about-us">About us</a>
                     <a href="#sale">Sale</a>
