added div main-why-choose-us

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </div>
         <div class="container">
             <nav>
-                    <a href="index.html"> <img class="logo" width="200" src="img/icons/company-logo.svg" alt="logo"></a>
-                    <label class="burger-icon" for="burger-checkbox">☰</label>
-                    <input type="checkbox" id="burger-checkbox">
+                <a href="index.html"> <img class="logo" width="200" src="img/icons/company-logo.svg" alt="logo"></a>
+                <label class="burger-icon" for="burger-checkbox">☰</label>
+                <input type="checkbox" id="burger-checkbox">
                 <div class="menu-nav">
                     <a href="#about-us">About us</a>
                     <a href="#sale">Sale</a>
@@ -97,37 +97,41 @@
             </div>
 
         </div>
-
-        <div class=text>
-            <p class="text-why-choose-us">WHY CHOOSE US.</p>
-            <p class="text-keep-fit">Keep fit, follow a healthy lifestyle with us!</p>
-        </div>
-
-        <div class=benefits>
-            <div>
-                <img src="img/why-choose-us/truck.svg" alt="truck">
-                <p class="text-free-shiping-over">FREE SHIPING OVER $90</p>
-                <p class="text-get-advatage">Get advantage of our free worldwide shipping on all orders over $90.</p>
+        <div class="main-why-choose-us">
+            <div class=text>
+                <p class="text-why-choose-us">WHY CHOOSE US.</p>
+                <p class="text-keep-fit">Keep fit, follow a healthy lifestyle with us!</p>
             </div>
 
-            <div>
-                <img src="img/why-choose-us/box.svg" alt="box">
-                <p class="text-easy-day-return">EASY 30-DAY RETURN</p>
-                <p class="text-if-the-item">If the item does not suit you, please send it back to us within 30 days.</p>
-            </div>
+            <div class=benefits>
+                <div class="section-free-shipping">
+                    <img src="img/why-choose-us/truck.svg" alt="truck">
+                    <p class="text-free-shiping-over">FREE SHIPING OVER $90</p>
+                    <p class="text-get-advatage">Get advantage of our free worldwide shipping on all orders over $90.
+                    </p>
+                </div>
 
-            <div>
-                <img src="img/why-choose-us/plant.svg" alt="plant">
-                <p class="text-eco-materials">ECO MATERIALS</p>
-                <p class="text-all-items-are-made">All items are made with at least 30% recycled materials and zero
-                    virgin polyester.</p>
-            </div>
+                <div>
+                    <img src="img/why-choose-us/box.svg" alt="box">
+                    <p class="text-easy-day-return">EASY 30-DAY RETURN</p>
+                    <p class="text-if-the-item">If the item does not suit you, please send it back to us within 30 days.
+                    </p>
+                </div>
 
-            <div>
-                <img src="img/why-choose-us/card.svg" alt="card">
-                <p class="text-payment-methods">20 PAYMENT METHODS</p>
-                <p class="text-pay-for-your">Pay for your orders with credit cards, PayPal, AliPay, and other payment
-                    methods.</p>
+                <div>
+                    <img src="img/why-choose-us/plant.svg" alt="plant">
+                    <p class="text-eco-materials">ECO MATERIALS</p>
+                    <p class="text-all-items-are-made">All items are made with at least 30% recycled materials and zero
+                        virgin polyester.</p>
+                </div>
+
+                <div>
+                    <img src="img/why-choose-us/card.svg" alt="card">
+                    <p class="text-payment-methods">20 PAYMENT METHODS</p>
+                    <p class="text-pay-for-your">Pay for your orders with credit cards, PayPal, AliPay, and other
+                        payment
+                        methods.</p>
+                </div>
             </div>
         </div>
 
@@ -192,15 +196,18 @@
             </div>
             <div class="mid-season-sale-products-section">
                 <div class="mid-season-sale-product">
-                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/adidas-cloudfoam-trainers.jpg" alt="adidas-cloudfoam-trainers">
+                    <img class="mid-season-sale-img"
+                        src="img/mid-season-get-your-discount/adidas-cloudfoam-trainers.jpg"
+                        alt="adidas-cloudfoam-trainers">
                     <div class="mid-season-sale-product-info">
-                    <a href="#" class="mid-season-sale-product-tittle">Adidas Cloudfoam Trainers</a>
-                    <span class="mid-season-sale-product-price">$60,00</span>
-                    <a href="#" class="btn-add-to-cart">Add to Cart</a>
+                        <a href="#" class="mid-season-sale-product-tittle">Adidas Cloudfoam Trainers</a>
+                        <span class="mid-season-sale-product-price">$60,00</span>
+                        <a href="#" class="btn-add-to-cart">Add to Cart</a>
                     </div>
                 </div>
                 <div class="mid-season-sale-product">
-                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/reebok-workout-shorts.jpg" alt="reebok-workout-shorts">
+                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/reebok-workout-shorts.jpg"
+                        alt="reebok-workout-shorts">
                     <div class="mid-season-sale-product-info">
                         <a href="#" class="mid-season-sale-product-tittle">Reebok Workout Shorts</a>
                         <span class="mid-season-sale-product-price">$25,00</span>
@@ -208,7 +215,8 @@
                     </div>
                 </div>
                 <div class="mid-season-sale-product">
-                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/puma-fitness-shoes-grey.jpg" alt="puma-fitness-shoes-grey">
+                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/puma-fitness-shoes-grey.jpg"
+                        alt="puma-fitness-shoes-grey">
                     <div class="mid-season-sale-product-info">
                         <a href="#" class="mid-season-sale-product-tittle">Puma Fitness Shoes in Grey</a>
                         <span class="mid-season-sale-product-price">$60,00</span>
@@ -216,7 +224,8 @@
                     </div>
                 </div>
                 <div class="mid-season-sale-product">
-                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/puma-essentia-tank-top.jpg" alt="puma-essentia-tank-top">
+                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/puma-essentia-tank-top.jpg"
+                        alt="puma-essentia-tank-top">
                     <div class="mid-season-sale-product-info">
                         <a href="#" class="mid-season-sale-product-tittle">Puma Essential Tank Top</a>
                         <span class="mid-season-sale-product-price">$43,00</span>
@@ -224,7 +233,8 @@
                     </div>
                 </div>
                 <div class="mid-season-sale-product">
-                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/nike-classic-polo-shirt.jpg" alt="nike-classic-polo-shirt">
+                    <img class="mid-season-sale-img" src="img/mid-season-get-your-discount/nike-classic-polo-shirt.jpg"
+                        alt="nike-classic-polo-shirt">
                     <div class="mid-season-sale-product-info">
                         <a href="#" class="mid-season-sale-product-tittle">Nike Classic Polo T-Shirt</a>
                         <span class="mid-season-sale-product-price">$23,00</span>
@@ -233,7 +243,7 @@
                 </div>
             </div>
         </div>
-        
+
         <!-- Get your discount section -->
         <!-- <div class="get-your-discount-section">
             <div class="get-your-discount-info">
