--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
                     </p>
                 </div>
 
-                <div>
+                <div class="section-easy-day-return">
                     <img src="img/why-choose-us/box.svg" alt="box">
                     <p class="text-easy-day-return">EASY 30-DAY RETURN</p>
                     <p class="text-if-the-item">If the item does not suit you, please send it back to us within 30 days.
                     </p>
                 </div>
 
-                <div>
+                <div class="section-eco-materials">
                     <img src="img/why-choose-us/plant.svg" alt="plant">
                     <p class="text-eco-materials">ECO MATERIALS</p>
                     <p class="text-all-items-are-made">All items are made with at least 30% recycled materials and zero
                         virgin polyester.</p>
                 </div>
 
-                <div>
+                <div class="section-payment-methods">
                     <img src="img/why-choose-us/card.svg" alt="card">
                     <p class="text-payment-methods">20 PAYMENT METHODS</p>
                     <p class="text-pay-for-your">Pay for your orders with credit cards, PayPal, AliPay, and other
