footer for mobile ready

--- a/index.html
+++ b/index.html
@@ -488,47 +488,43 @@
     </main>
     <!--Block 11-12 end-->
     <footer>
-        <img width="300" src="img/logo.svg" alt="logo">
-        <p>Workout offers fitness clothing and footwear for those who want to change their lives and bodies for better.
-        </p>
+        <div class="logo-nav">
+            <img class="company-logo" width="200" src="img/icons/company-logo.svg" alt="logo">
+            <span class="workout-offers">Workout offers fitness clothing and footwear for those who want to change their lives and bodies for
+                better.
+            </span>
+        </div>
         <div class="foot">
-            <div class="second-nav">
-                <h3>Navigation</h3>
-                <hr id="second-nav-hr">
-                <nav>
+            <nav>
+                <div class="second-nav">
+                    <p class="second-nav-title">Navigation</p>
+                    <hr id="second-nav-hr">
                     <a href="#about-us">About us</a>
-                    <a href="#sale">Sale</a>
                     <a href="#collection">Collection</a>
                     <a href="#blog">Blog</a>
                     <a href="#contact-us">Contact us</a>
-                </nav>
-            </div>
-            <div class="shop-now-nav">
-                <h3>Shop</h3>
-                <hr id="shop-now-hr">
-                <nav>
+                </div>
+                <div class="shop-now-nav">
+                    <p class="shop-now-title">Shop</p>
+                    <hr id="shop-now-hr">
                     <a href="#woman">Woman</a>
                     <a href="#men">Men</a>
                     <a href="#shoes">Shoes</a>
                     <a href="#clothes">Clothes</a>
                     <a href="#sale">Sale</a>
-                </nav>
-            </div>
-            <div class="follow-us">
-                <h3>Follow Us</h3>
-                <hr class="follow-us-hr">
-                <nav>
+                </div>
+                <div class="follow-us">
+                    <p class="folow-us-title">Follow Us</p>
+                    <hr id="follow-us-hr">
                     <a href="https://www.youtube.com/"> <img width="50" src="img/icons/icon-youtube.png"
                             alt="Youtube logo"></a>
                     <a href="https://www.facebook.com/"> <img width="35" src="img/icons/icon-facebook.png"
                             alt="Facebook logo"></a>
                     <a href="https://www.instagram.com/"> <img width="35" src="img/icons/icon-instagram.png"
                             alt="Instagram logo"></a>
-                </nav>
-            </div>
-            <div>
-                <hr class="botton-hr">
-            </div>
+                </div>
+            </nav>
+            <hr id="botton-hr">
             <div class="all-rights-reserved">
                 <p>© Created by</p>
                 <p>ALL RIGHTS RESERVED</p>
