--- a/index.html
+++ b/index.html
@@ -374,8 +374,9 @@
             <p class="text-arrivals">NEW ARRIVALS.</p>
             <p class="text-be-first">Be the first to buy new items by leading brands.</p>
             <button class="text-more-product">More product</button>
-        </div>
+        </div> 
 
+      <div class="prices-for-goods">
         <div>
             <img src="img/carousel-goods/turquoise-sneakers.jfif" alt="turquoise-sneakers">
             <p>Puma Textile Running Shoes</p>
@@ -411,7 +412,7 @@
             <p>$200,00</p>
             <button>Add to Card</button>
         </div>
-
+    </div>
         <!--Block ira end-->
 
         <!--Pavlo-->
