modified footer for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -488,14 +488,16 @@
     </main>
     <!--Block 11-12 end-->
     <footer>
-        <div class="logo-nav">
-            <img class="company-logo" width="200" src="img/icons/company-logo.svg" alt="logo">
-            <span class="workout-offers">Workout offers fitness clothing and footwear for those who want to change their lives and bodies for
-                better.
-            </span>
-        </div>
-        <div class="foot">
-            <nav>
+        <nav>
+            <div class="foot">
+                <div class="company-logo">
+                    <img width="200" src="img/icons/company-logo.svg" alt="logo">
+                    <span class="workout-offers">Workout offers fitness clothing and footwear for those who want to
+                        change
+                        their lives and bodies for
+                        better.
+                    </span>
+                </div>
                 <div class="second-nav">
                     <p class="second-nav-title">Navigation</p>
                     <hr id="second-nav-hr">
@@ -516,19 +518,18 @@
                 <div class="follow-us">
                     <p class="folow-us-title">Follow Us</p>
                     <hr id="follow-us-hr">
-                    <a href="https://www.youtube.com/"> <img width="50" src="img/icons/icon-youtube.png"
+                    <a href="https://www.youtube.com/"> <img class="logo-picture" width="50" src="img/icons/icon-youtube.png"
                             alt="Youtube logo"></a>
-                    <a href="https://www.facebook.com/"> <img width="35" src="img/icons/icon-facebook.png"
+                    <a href="https://www.facebook.com/"> <img class="logo-pic" width="35" src="img/icons/icon-facebook.png"
                             alt="Facebook logo"></a>
-                    <a href="https://www.instagram.com/"> <img width="35" src="img/icons/icon-instagram.png"
+                    <a href="https://www.instagram.com/"> <img class="logo-pic" width="35" src="img/icons/icon-instagram.png"
                             alt="Instagram logo"></a>
                 </div>
-            </nav>
-            <hr id="botton-hr">
-            <div class="all-rights-reserved">
-                <p>© Created by</p>
-                <p>ALL RIGHTS RESERVED</p>
-            </div>
+        </nav>
+        <hr id="botton-hr">
+        <div class="all-rights-reserved">
+            <span class="created-by">© Created by</span>
+            <span class="rights">ALL RIGHTS RESERVED</span>
         </div>
     </footer>
 </body>
