--- a/index.html
+++ b/index.html
@@ -374,45 +374,45 @@
             <p class="text-arrivals">NEW ARRIVALS.</p>
             <p class="text-be-first">Be the first to buy new items by leading brands.</p>
             <button class="text-more-product">More product</button>
-        </div> 
-
-      <div class="prices-for-goods">
-        <div>
-            <img src="img/carousel-goods/turquoise-sneakers.jfif" alt="turquoise-sneakers">
-            <p>Puma Textile Running Shoes</p>
-            <p>$62,00</p>
-            <button>Add to Card</button>
         </div>
 
-        <div>
-            <img src="img/carousel-goods/black-sneakers.jfif" alt="black-sneakers">
-            <p>Adidas Black Trainers</p>
-            <p>$60,00</p>
-            <button>Add to Card</button>
-        </div>
+        <div class="prices-for-goods">
+            <div>
+                <img src="img/carousel-goods/turquoise-sneakers.jfif" alt="turquoise-sneakers">
+                <p>Puma Textile Running Shoes</p>
+                <p>$62,00</p>
+                <button>Add to Card</button>
+            </div>
 
-        <div>
-            <img src="img/carousel-goods/girl-in-a-blue-jacket.jfif" alt="girl-in-a-blue-jacket">
-            <p>Nike Winter Jacket in Blue</p>
-            <p>$85,00</p>
-            <button>Add to Card</button>
-        </div>
+            <div>
+                <img src="img/carousel-goods/black-sneakers.jfif" alt="black-sneakers">
+                <p>Adidas Black Trainers</p>
+                <p>$60,00</p>
+                <button>Add to Card</button>
+            </div>
 
-        <div>
-            <img src="img/carousel-goods/girl-in-a-red-coat.jfif" alt="girl-in-a-red-coat">
-            <p>Reebok Red Duster</p>
-            <p>$60,00</p>
-            <button>Add to Card</button>
-        </div>
+            <div>
+                <img src="img/carousel-goods/girl-in-a-blue-jacket.jfif" alt="girl-in-a-blue-jacket">
+                <p>Nike Winter Jacket in Blue</p>
+                <p>$85,00</p>
+                <button>Add to Card</button>
+            </div>
 
-        <div>
-            <img src="img/carousel-goods/black-sneakers-with-a-white-stripe.jfif"
-                alt="black-sneakers-with-a-white-stripe">
-            <p>Asics Jordan 2000</p>
-            <p>$200,00</p>
-            <button>Add to Card</button>
+            <div>
+                <img src="img/carousel-goods/girl-in-a-red-coat.jfif" alt="girl-in-a-red-coat">
+                <p>Reebok Red Duster</p>
+                <p>$60,00</p>
+                <button>Add to Card</button>
+            </div>
+
+            <div>
+                <img src="img/carousel-goods/black-sneakers-with-a-white-stripe.jfif"
+                    alt="black-sneakers-with-a-white-stripe">
+                <p>Asics Jordan 2000</p>
+                <p>$200,00</p>
+                <button>Add to Card</button>
+            </div>
         </div>
-    </div>
         <!--Block ira end-->
 
         <!--Pavlo-->
@@ -519,20 +519,22 @@
                 <div class="follow-us">
                     <p class="folow-us-title">Follow Us</p>
                     <hr id="follow-us-hr">
-                    <a href="https://www.youtube.com/"> <img class="logo-picture" width="50" src="img/icons/icon-youtube.png"
-                            alt="Youtube logo"></a>
-                    <a href="https://www.facebook.com/"> <img class="logo-pic" width="35" src="img/icons/icon-facebook.png"
-                            alt="Facebook logo"></a>
-                    <a href="https://www.instagram.com/"> <img class="logo-pic" width="35" src="img/icons/icon-instagram.png"
-                            alt="Instagram logo"></a>
+                    <a href="https://www.youtube.com/"> <img class="logo-picture" width="50"
+                            src="img/icons/icon-youtube.png" alt="Youtube logo"></a>
+                    <a href="https://www.facebook.com/"> <img class="logo-pic" width="35"
+                            src="img/icons/icon-facebook.png" alt="Facebook logo"></a>
+                    <a href="https://www.instagram.com/"> <img class="logo-pic" width="35"
+                            src="img/icons/icon-instagram.png" alt="Instagram logo"></a>
                 </div>
         </nav>
-        <hr id="botton-hr">
-        <div class="all-rights-reserved">
-            <span class="created-by">© Created by</span>
-            <span class="rights">ALL RIGHTS RESERVED</span>
-        </div>
     </footer>
+    <div>
+        <hr id="botton-hr">
+    </div>
+    <div id="all-rights-reserved">
+        <span class="created-by">© Created by team-02</span>
+        <span class="rights">All rights reserved</span>
+    </div>
 </body>
 
 </html>
