small changes in navigation

--- a/index.html
+++ b/index.html
@@ -513,9 +513,9 @@
                 <div class="shop-now-nav">
                     <p class="shop-now-title">Shop</p>
                     <hr id="shop-now-hr">
-                    <a href="#woman">Woman</a>
-                    <a href="#men">Men</a>
-                    <a href="#shoes">Shoes</a>
+                    <a href="#collection">Woman</a>
+                    <a href="#collection">Men</a>
+                    <a href="#collection">Shoes</a>
                     <a href="#clothes">Clothes</a>
                     <a href="#sale">Sale</a>
                 </div>
