add css keep comfort

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                 <a class="keep-learn-more" href="#about-us">Learn More</a>
             </div>
             <div class="workout-woman-img">
-                <img src="img/deal-of-the-month/workout-woman.jpg" width="100%" alt="Fit Woman">
+                <img src="img/deal-of-the-month/workout-woman.jpg" alt="Fit Woman">
             </div>
         </div>
         <!--END Pavlo-->
