--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="container">
             <nav>
                 <a href="index.html"> <img class="logo" width="200" src="img/icons/company-logo.svg" alt="logo"></a>
-                <label class="burger-icon" for="burger-checkbox">☰</label>
-                <input type="checkbox" id="burger-checkbox">
+                <input class="menu-btn" type="checkbox" id="menu-btn" />
+                <label class="menu-icon" for="menu-btn"><span class="nav-icon"></label>
                 <div class="menu-nav">
                     <a href="#about-us">About us</a>
                     <a href="#sale">Sale</a>
@@ -476,10 +476,10 @@
         </div>
         <div class="contact-us-main">
             <div class="maps-container">
-            <iframe
-                src="
+                <iframe
+                    src="
                 https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.4185754150153!2d-74.18139188459445!3d40.73081427932994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2537102f5f5df%3A0xc3d5dc357162b4ec!2zMzI1IFVuaXZlcnNpdHkgQXZlLCBOZXdhcmssIE5KIDA3MTAyLCDQodCo0JA!5e0!3m2!1sru!2sua!4v1636233117165!5m2!1sru!2sua"
-                width="1600" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    width="1600" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div id="contact-us">
                 <h2>Contacts <span class="header-dot-style">.</span></h2>
