--- a/product-page.html
+++ b/product-page.html
@@ -20,9 +20,9 @@
         </div>
         <div class="container">
             <nav>
-                    <a href="index.html"> <img class="logo" width="200" src="img/icons/company-logo.svg" alt="logo"></a>
-                    <label class="burger-icon" for="burger-checkbox">☰</label>
-                    <input type="checkbox" id="burger-checkbox">
+                <a href="index.html"> <img class="logo" width="200" src="img/icons/company-logo.svg" alt="logo"></a>
+                <input class="menu-btn" type="checkbox" id="menu-btn" />
+                <label class="menu-icon" for="menu-btn"><span class="nav-icon"></label>
                 <div class="menu-nav">
                     <a href="#about-us">About us</a>
                     <a href="#sale">Sale</a>
