fixed validator problems

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <nav>
                 <a href="index.html"> <img class="logo" width="200" src="img/icons/company-logo.svg" alt="logo"></a>
                 <input class="menu-btn" type="checkbox" id="menu-btn" />
-                <label class="menu-icon" for="menu-btn"><span class="nav-icon"></label>
+                <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
                 <div class="menu-nav">
                     <a href="#about-us">About us</a>
                     <a href="#sale">Sale</a>
@@ -74,7 +74,7 @@
         <div class="menu-new-arrivals">
             <div class="block-new-arrival">
                 <div class="div-new-arrival">
-                    
+
                     <p class="menu-newarriwals">NEW ARRIVALS.</p>
                     <hr class="red_line_div-new-arrival">
                     <button class="newarrival-button">Shop Collection</button>
@@ -530,6 +530,7 @@
                     <a href="https://www.instagram.com/"> <img class="logo-pic" width="35"
                             src="img/icons/icon-instagram.png" alt="Instagram logo"></a>
                 </div>
+            </div>
         </nav>
     </footer>
     <div>
