Newsletter added style form, font-size, font family. Ready

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     GET THIS SPECIAL OFFER. </p>
             </div>
             <div class="form-newsletter">
-                <form action="#">
+                <form action=" ">
                     <ul>
                         <li>
                             <input type="email" name="user_mail" placeholder="Your email address">
