fixed validator problems for product page

--- a/product-page.html
+++ b/product-page.html
@@ -23,7 +23,7 @@
             <nav>
                 <a href="index.html"> <img class="logo" width="200" src="img/icons/company-logo.svg" alt="logo"></a>
                 <input class="menu-btn" type="checkbox" id="menu-btn" />
-                <label class="menu-icon" for="menu-btn"><span class="nav-icon"></label>
+                <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
                 <div class="menu-nav">
                     <a href="#about-us">About us</a>
                     <a href="#sale">Sale</a>
@@ -85,6 +85,7 @@
                     <a href="https://www.instagram.com/"> <img class="logo-pic" width="35"
                             src="img/icons/icon-instagram.png" alt="Instagram logo"></a>
                 </div>
+            </div>
         </nav>
     </footer>
     <div>
