--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
         <div class="menu-new-arrivals">
             <div class="block-new-arrival">
                 <div class="div-new-arrival">
-
                     <p class="menu-newarriwals">NEW ARRIVALS.</p>
                     <hr class="red_line_div-new-arrival">
                     <button class="newarrival-button">Shop Collection</button>
@@ -92,7 +91,7 @@
             <div class="block-hot-sale">
                 <div class="div-hot-sale">
                     <p class="text-hot-sale">HOT SALE.</p>
-                    <hr>
+                    <hr class="line-text-hot-sale">
                     <button class="hot-sale-buttom">Shop Collection</button>
                 </div>
             </div>
