--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="menu-new-arrivals">
             <div class="block-new-arrival">
                 <div class="div-new-arrival">
-                    <p class="menu-newarriwals">NEW ARRIVALS.</p>
+                    <p class="menu-newarriwals">NEW ARRIVALS<span class="point-menu-newarriwals">.</span></p>
                     <hr class="red_line_div-new-arrival">
                     <button class="newarrival-button">Shop Collection</button>
                 </div>
@@ -82,7 +82,7 @@
 
             <div class="block-trainers">
                 <div class="div-trainers">
-                    <p class="text-trainers">TRAINERS.</p>
+                    <p class="text-trainers">TRAINERS<span class="point-text-trainers">.</span></p>
                     <hr class="line_red_text-trainers">
                     <button class="trainers-buttom">Shop Collection</button>
                 </div>
@@ -90,7 +90,7 @@
 
             <div class="block-hot-sale">
                 <div class="div-hot-sale">
-                    <p class="text-hot-sale">HOT SALE.</p>
+                    <p class="text-hot-sale">HOT SALE<span class="piont-text-hot-sale">.</span></p>
                     <hr class="line-text-hot-sale">
                     <button class="hot-sale-buttom">Shop Collection</button>
                 </div>
