--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
         </div>
         <div class="main-why-choose-us">
             <div class=text>
-                <p class="text-why-choose-us">WHY CHOOSE US.</p>
+                <p class="text-why-choose-us">WHY CHOOSE US<span class="piont-text-why-choose-us">.</span></p>
+                <hr>
                 <p class="text-keep-fit">Keep fit, follow a healthy lifestyle with us!</p>
                 <hr>
             </div>
