--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="main-why-choose-us">
             <div class=text>
                 <p class="text-why-choose-us">WHY CHOOSE US<span class="piont-text-why-choose-us">.</span></p>
-                <hr>
+                <hr class="line-why-choose-us">
                 <p class="text-keep-fit">Keep fit, follow a healthy lifestyle with us!</p>
                 <hr>
             </div>
