added clock to header

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <a href="https://www.instagram.com/"> <img width="25" src="img/icons/icon-instagram.png"
                             alt="Instagram logo"></a>
                 </div>
+                <div class="time"></div>
             </nav>
         </div>
     </header>
@@ -540,6 +541,7 @@
         <span class="created-by">© Created by team-02</span>
         <span class="rights">All rights reserved</span>
     </div>
+    <script src="js/header.js"></script>
 </body>
 
 </html>
