--- a/index.html
+++ b/index.html
@@ -103,15 +103,13 @@
                 <p class="text-why-choose-us">WHY CHOOSE US<span class="piont-text-why-choose-us">.</span></p>
                 <hr class="line-why-choose-us">
                 <p class="text-keep-fit">Keep fit, follow a healthy lifestyle with us!</p>
-                <hr>
             </div>
 
             <div class=benefits>
                 <div class="section-free-shipping">
                     <img src="img/why-choose-us/truck.svg" alt="truck">
                     <p class="text-free-shiping-over">FREE SHIPING OVER $90</p>
-                    <p class="text-get-advatage">Get advantage of our free worldwide shipping on all orders over $90.
-                    </p>
+                    <p class="text-get-advatage">Get advantage of our free worldwide shipping on all orders over $90.</p>
                 </div>
 
                 <div class="section-easy-day-return">
@@ -131,9 +129,7 @@
                 <div class="section-payment-methods">
                     <img src="img/why-choose-us/card.svg" alt="card">
                     <p class="text-payment-methods">20 PAYMENT METHODS</p>
-                    <p class="text-pay-for-your">Pay for your orders with credit cards, PayPal, AliPay, and other
-                        payment
-                        methods.</p>
+                    <p class="text-pay-for-your">Pay for your orders with credit cards, PayPal, AliPay, and other payment methods.</p>
                 </div>
             </div>
         </div>
