bag fixed js main collection

--- a/index.html
+++ b/index.html
@@ -285,18 +285,14 @@
 
         <div id="collection">
             <div>
-                <h1 class="main-collection">MAIN COLLECTION.</h1>
-                <hr style="height: 2px; width:8%; background-color: #e0e0e0;">
+                <h1 class="main-collection">MAIN COLLECTION<span class="main-collection-dot-style">.</span></h1>
+                <!-- <hr class="line-main-collection"> -->
                 <p class="shop-our-main">Shop our main fitness collection for men and women represented by the
-                    famous
-                    brands.</p>
+                    famous brands.</p>
                 <div class="menu-main-collection">
                     <a href="#tab-1" class="menu-main-collection_item">Women</a>
                     <a href="#tab-2" class="menu-main-collection_item">Men</a>
                     <a href="#tab-3" class="menu-main-collection_item">Shoes</a>
-                    <!--<p>Women</p>
-                    <p>Men</p>
-                    <p>Shoes</p>-->
                 </div>
             </div>
             <div class="main-collection-img">
@@ -304,14 +300,12 @@
                 <div id="tab-1" class="main-collection-content_item">
                     <div>
                         <img src="img/main-collection/woman-dark.jpg" alt="woman-dark">
-                        <br>
                         <a class="name-product" href="#">Puma Sports Bra</a>
                         <p class="price-main-collection">$12,00</p>
                         <button class="add-to-cart-main-collection">Add to Cart</button>
                     </div>
                     <div>
                         <img src="img/main-collection/woman-pink-dark.jpg" alt="woman-pink-dark">
-                        <br>
                         <a class="name-product" href="#">Reebok Long Sleeve Top</a>
                         <p class="price-main-collection">$18,00</p>
                         <button class="add-to-cart-main-collection">Add to Cart</button>
