--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!--Block 1-2 end-->
 
         <!--Block Ira start-->
-
+    <div class="new-arrival-conteiner">
         <div class="menu-new-arrivals">
             <div class="block-new-arrival">
                 <div class="div-new-arrival">
@@ -96,7 +96,8 @@
                     <button class="hot-sale-buttom">Shop Collection</button>
                 </div>
             </div>
-
+        </div>
+        
         </div>
         <div class="main-why-choose-us">
             <div class=text>
