added css files to new-arriwals

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!--Block 1-2 end-->
 
         <!--Block Ira start-->
-    <div class="new-arrival-conteiner">
+    
         <div class="menu-new-arrivals">
             <div class="block-new-arrival">
                 <div class="div-new-arrival">
@@ -98,7 +98,7 @@
             </div>
         </div>
         
-        </div>
+
         <div class="main-why-choose-us">
             <div class=text>
                 <p class="text-why-choose-us">WHY CHOOSE US<span class="piont-text-why-choose-us">.</span></p>
@@ -184,7 +184,7 @@
         <!--Block 7-8 Vova start-->
 
         <!-- Mid Season Sele Section -->
-        <div id="sale" class="mid-season-sale-section">
+        <!-- <div id="sale" class="mid-season-sale-section">
             <div class="mid-season-sale-header">
                 <h2 class="mid-season-sale-tittle">
                     Mid-Season Sale<span class="header-dot-style">.</span>
@@ -242,7 +242,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Get your discount section -->
         <!-- <div class="get-your-discount-section">
