--- a/index.html
+++ b/index.html
@@ -363,16 +363,19 @@
         <!--Block 9-10 end-->
 
         <!--Block ira-->
-        <section class="deal-of-the-month">
+    <div class="deal-of-the-month-container">
+        <div class="deal-of-the-month">
             <h2 class="text-deal-of-the-month">DEAL OF THE MONTH<span class="red_pointer">.</span></h2>
             <p class="text-puma-sports">PUMA SPORTS BRA <span class="fifty-dollars">$50</span> <span class="seventy-dollars">$70</span></p>
             <p class="text-start-your">Start your fitness story right away with this comfortable bra and get advantage of our discount.</p>
             <a class="text-more-details" href="#more-details">More Details</a>
-            <!-- <img class="de" src="img/deal-of-the-month/stretch-women.jpg" alt="Stretching woman"> -->
             <div class="countdown">
             </div>
-        </section>
+        </div>
+        <img class="stretching-woman" src="img/deal-of-the-month/stretch-women.jpg" alt="Stretching woman">
+    </div>
 
+    
         <div>
             <p class="text-arrivals">NEW ARRIVALS<span class="piont-text-arrivals">.</span></p>
             <p class="text-be-first">Be the first to buy new items by leading brands.</p>
