--- a/index.html
+++ b/index.html
@@ -370,6 +370,14 @@
             <p class="text-start-your">Start your fitness story right away with this comfortable bra and get advantage of our discount.</p>
             <a class="text-more-details" href="#more-details">More Details</a>
             <div class="countdown">
+                <div class="timer">
+                    <div class="timer__items">
+                      <div class="timer__item timer__days">00</div>
+                      <div class="timer__item timer__hours">00</div>
+                      <div class="timer__item timer__minutes">00</div>
+                      <div class="timer__item timer__seconds">00</div>
+                    </div>
+                  </div>
             </div>
         </div>
         <img class="stretching-woman" src="img/deal-of-the-month/stretch-women.jpg" alt="Stretching woman">
@@ -548,6 +556,7 @@
     </div>
     <script src="js/header.js"></script>
     <script src="js/product-main-collection.js"></script>
+    <script src="js/timer.js"></script>
 </body>
 
 </html>
