fixed js file for mid-seasone-sale section

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
     <script src="js/header.js"></script>
     <script src="js/product-main-collection.js"></script>
     <script src="js/timer.js"></script>
-    <script src="js/products.js"></script>
+    <script src="js/mid-season-sale-products.js"></script>
 </body>
 
 </html>
