added styles for asc and desc button in mid-season-sale section

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
                         We are committed to give you the best buying experience!</p>
                 </div>
                 
-                <button class="asc-price">Ascending price</button>
-                <button class="desc-price">Descending price</button>
+                <button class="asc-price btn-price">Ascending price</button>
+                <button class="desc-price btn-price">Descending price</button>
                 <div class="mid-season-sale-products-section"></div>
                 
             </div>
