commented some blocks

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <!--Block 7-8 end-->
 
         <!--Block 9-10 Pavlo start-->
-        <div class="carousel-main">
+        <!-- <div class="carousel-main">
             <div class="carousel-discounts">
                 <div class="of-all-t-shirt">
                     <img class="carousel-discounts-img" src="img/carousel/carousel-one.jpg" alt="one">
@@ -240,7 +240,7 @@
                     <a class="shop-colection-carousel" href="#">Shop Collection</a>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div id="collection">
             <div>
@@ -345,7 +345,7 @@
     </div>
 
     
-        <div>
+        <!-- <div>
             <p class="text-arrivals">NEW ARRIVALS<span class="piont-text-arrivals">.</span></p>
             <p class="text-be-first">Be the first to buy new items by leading brands.</p>
             <button class="text-more-product">More product</button>
@@ -386,7 +386,7 @@
                 <p>Asics Jordan 2000</p>
                 <p>$200,00</p>
                 <button>Add to Card</button>
-            </div>
+            </div> -->
         </div>
         <!--Block ira end-->
 
@@ -417,7 +417,7 @@
             </div>
         </div>
         <!--END Pavlo-->
-        <div id="blog">
+        <!-- <div id="blog">
             <section>
                 <h3>Blog</h3>
                 <p>Read the latest articles from our experts.</p>
@@ -426,7 +426,7 @@
                     <h2>No blogposts yet..</h2>
                 </article>
             </section>
-        </div>
+        </div> -->
         <div class="our-newsletter">
             <div class="text-offer">
                 <div class="icon-offer">
