moved clock into burger

--- a/product-page.html
+++ b/product-page.html
@@ -25,6 +25,7 @@
                 <input class="menu-btn" type="checkbox" id="menu-btn" />
                 <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
                 <div class="menu-nav">
+                    <hr id="testtest">
                     <a href="#about-us">About us</a>
                     <a href="#sale">Sale</a>
                     <a href="#collection">Collection</a>
