--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 <div class="shop-now-nav">
                     <p class="shop-now-title">Shop</p>
                     <hr id="shop-now-hr">
-                    <a href="#collection"><span class="tire">—</span>Woman</a>
+                    <a href="#collection">Woman</a>
                     <a href="#collection">Men</a>
                     <a href="#collection">Shoes</a>
                     <a href="#clothes">Clothes</a>
