--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <p class="new-fitness-collection-text">Trending.</p>
                 <h2>
                     New Fitness<br>Collection
-                    <span class="header-dot-style">.</span>
+                    <span class="header-dot-style-nfc">.</span>
                 </h2>
             </div>
             <div class="link-collection">
