--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="product-page.html">
     <link rel="stylesheet" href="css/mid-season-get-your-discount.css">
     <link rel="stylesheet" href="css/contact-us.css">
+    <link rel="stylesheet" href="css/our-brands.css">
     <link rel="icon" href="img/icons/icon-company.png">
 </head>
 
@@ -181,6 +182,21 @@
             <div class="link-collection">
                 <a href="#collection">Shop Now &#8594;</a>
             </div>
+        </div>
+        <div class="our-brands">
+            <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1608541737042-87a12275d313?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=861&q=80');">
+                <h3 class="brand-name">Nike</h3>
+            </div>
+            <div class="slide" style="background-image: url(https://images.unsplash.com/photo-1615064779799-df1bfcc66ed0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YWRpZGFzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60);">
+                <h3 class="brand-name">Adidas</h3>
+            </div>
+            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1593548366595-c449f72ccb3d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cHVtYSUyMGxvZ298ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');">
+                <h3 class="brand-name">Puma</h3>
+            </div>
+            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1559278079-0bbb5e183b3d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8dW5kZXIlMjBhcm1vdXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');">
+                <h3 class="brand-name">Under Armour</h3>
+            </div>
+
         </div>
         <!--Block 5-6 end-->
 
@@ -541,6 +557,7 @@
     <script src="js/timer.js"></script>
     <script src="js/mid-season-sale-products.js"></script>
     <script src="js/corousel-discounts.js"></script>
+    <script src="js/our-brands.js"></script>
 </body>
 
 </html>
